--- a/src/views/login/login.scss
+++ b/src/views/login/login.scss
@@ -4,6 +4,8 @@
     display: flex; 
     flex-direction: column;   
     position: absolute;
+    overflow-y: scroll;
+    text-align: center;
     top: 0;
     left: 0;
     width: 100%;
@@ -14,7 +16,7 @@
     
     background-size: cover;
     background-blend-mode: color;
-    // @include blur-effect;
+    @include clearfix;
     z-index: 0;
     
     header {
@@ -42,27 +44,21 @@
     }//end:header
 
     section {
-        flex-direction: row-reverse;
-        // border: 1px solid red;
-        // height: 200vh;
+        display: flex;
+        flex-direction: column;        
         padding: 0 20px;
-        margin: 10px 0;
+        margin: 0px auto 10px;
 
-        .login-modal-section {
-            // border: 1px solid orangered;
-            float: left;
-            margin: 0 35px;
-            width: 40%;            
+        .login-modal-section {            
+            // border: 1px solid orangered;            
+            margin: 0 35px 10px;
+            width: 90%;            
         }
-
-        .rotating-card-section {
-            // position: absolute;
-            // border: 1px solid white;
-            float: right;
-            right: 30px;
-            top:25px;
-            margin: 0 15px;
-            width: 50%;
+        
+        .rotating-card-section {                        
+            // border: 1px solid green;
+            // margin: 0 15px;
+            // width: 80%;
             height: 68vh;
         }
     }//end:section
